# pypika-gis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  pypika-gis-tests.yml  python-app.yml
pypika_gis/: __init__.py  spatialtypes.py  test_mssql_spatialtypes.py  test_postgis_spatialtypes.py  test_spatialtypes.py
pypika_gis/dialects/: MSSQLSpatial.py  PostGIS.py  PostgreSQLSpatial.py  __init__.py
src/: spatialtypes.py
