[tool.poetry]
name = "pypika-gis"
version = "1.2.0"
description = "SpatialTypes functions for extend PyPika with GIS"
readme = "README.md"
keywords = ["pypika", "gis", "postgis", "sql", "builder"]
repository="https://github.com/eduardogspereira/pypika-gis"
authors = ["Eduardo G. S. Pereira <edu_vcd@hotmail.com>"]

[tool.poetry.dependencies]
python = "*"
PyPika = "^0.26.0"

[tool.poetry.dev-dependencies]
pytest = "^3.6.3"
pytest-cov = "^2.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
