[tool.poetry]
name = "pypika-gis"
version = "2.0.0"
description = "SpatialTypes functions for extend PyPika with GIS"
readme = "README.md"
keywords = ["pypika", "gis", "postgis", "sql", "builder"]
repository="https://github.com/eduardogspereira/pypika-gis"
authors = ["Eduardo G. S. Pereira <edu_vcd@hotmail.com>"]
exclude = ["./assets"]

[tool.poetry.dependencies]
python = ">=3.6.1"
PyPika = "0.*"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
